@@ -5,16 +5,16 @@ import br.com.gerararquivos.shell.ExecutarSh;
 import br.com.gerararquivos.trocararquivoswagger.TrocarArquivoSwagger;
 
 import java.io.*;
-import java.net.URL;
 import java.sql.SQLException;
 import java.util.List;
 
 public class Main {
     private static final String ARQUIVO_COMPLETO_TEMPLATE = "exemploCompleto.yaml";
     private static final String ARQUIVO_DOCKERFILE = "Dockerfile";
+    private static final String LOG_LEVEL = System.getProperty("log.level");
 
     public static void main(String[] args) throws IOException, SQLException, InterruptedException {
-        System.out.println(List.of(args));
+        println(List.of(args));
         if ("0".equals(args[0])) {
             TrocarArquivoSwagger.modificarArquivoOpenApiConfig(args[1]);
             return;
@@ -33,8 +33,8 @@ public class Main {
         copiarDockerfile(workspace, javaOpts, appPath);
         createArquivoKubernetesCompleto(workspace, image, port.toString(), usuario, repositorio);
         ExecutarSh.executarDeployKub(image, workspace);
-        System.out.println("");
-        System.out.println("");
+        System.out.println();
+        System.out.println();
         System.out.println("================================");
         System.out.print("Publicado em ");
         System.out.println("http://vemser-dbc.dbccompany.com.br:39000/" + usuario + "/" + repositorio);
@@ -45,71 +45,63 @@ public class Main {
 
     private static void createArquivoKubernetesCompleto(String workspace, String image, String port, String usuario, String repo) throws IOException {
         System.out.println("criando arquivo de deploy completo");
-        URL resource = Main.class.getClassLoader().getResource(ARQUIVO_COMPLETO_TEMPLATE);
-        if (resource == null) {
-            throw new IllegalArgumentException(ARQUIVO_COMPLETO_TEMPLATE + " file not found!");
-        } else {
-            String fileContent;
 
-            byte[] data;
-            try (InputStream in = Main.class.getClassLoader().getResourceAsStream(ARQUIVO_COMPLETO_TEMPLATE)) {
-                data = in.readAllBytes();
-            }
-            fileContent = new String(data);
-            fileContent = fileContent.replace("{{usuario}}", usuario);
-            fileContent = fileContent.replace("{{repo}}", repo);
-            fileContent = fileContent.replace("{{image}}", image);
-            fileContent = fileContent.replace("{{port}}", port);
+        String fileContent = readFileToString(ARQUIVO_COMPLETO_TEMPLATE);
+        fileContent = fileContent.replace("{{usuario}}", usuario);
+        fileContent = fileContent.replace("{{repo}}", repo);
+        fileContent = fileContent.replace("{{image}}", image);
+        fileContent = fileContent.replace("{{port}}", port);
 
-            File destino = new File(workspace + "/k8s/complete-deployment.yaml");
-            if (destino.exists()) {
-                destino.delete();
-            }
-            if (!destino.getParentFile().exists()) {
-                destino.getParentFile().mkdirs();
-            }
-            destino.createNewFile();
-
-            BufferedWriter writer = new BufferedWriter(new FileWriter(destino));
-            writer.append(fileContent);
-            writer.close();
+        File destino = new File(workspace + "/k8s/complete-deployment.yaml");
+        if (destino.exists()) {
+            destino.delete();
         }
+        if (!destino.getParentFile().exists()) {
+            destino.getParentFile().mkdirs();
+        }
+        destino.createNewFile();
+
+        BufferedWriter writer = new BufferedWriter(new FileWriter(destino));
+        writer.append(fileContent);
+        writer.close();
     }
+
 
     public static void copiarDockerfile(String workspace, String javaOpts, String appPath) throws IOException {
         System.out.println("criando arquivo dockerfile");
-        URL resource = Main.class.getClassLoader().getResource(ARQUIVO_DOCKERFILE);
-        if (resource == null) {
-            throw new IllegalArgumentException(ARQUIVO_DOCKERFILE + " file not found!");
-        } else {
-            String fileContent;
+        String fileContent = readFileToString(ARQUIVO_DOCKERFILE);
+        String url = "-Dspring.datasource.url=jdbc:oracle:thin:@10.0.20.80:1521/xe -Doracle.jdbc.timezoneAsRegion=false";
+        String port = "-Dserver.port=8080";
+        String profile = "-Dspring.profiles.active=hml";
+        String appName = "-Dspring.application.name=" + appPath;
+        String forwardHeader = "-Dserver.use-forward-headers=true -Dserver.forward-headers-strategy=framework -Dspringdoc.swagger-ui.path=/";
+        fileContent = fileContent.replace("{{javaOpts}}", javaOpts + " "
+                + url + " "
+                + port + " "
+                + profile + " "
+                + appName + " "
+                + forwardHeader);
 
-            byte[] data;
-            try (InputStream in = Main.class.getClassLoader().getResourceAsStream(ARQUIVO_DOCKERFILE)) {
-                data = in.readAllBytes();
-            }
-            fileContent = new String(data);
-            String url = "-Dspring.datasource.url=jdbc:oracle:thin:@10.0.20.80:1521/xe -Doracle.jdbc.timezoneAsRegion=false";
-            String port = "-Dserver.port=8080";
-            String profile = "-Dspring.profiles.active=hml";
-            String appName = "-Dspring.application.name=" + appPath;
-            String forwardHeader = "-Dserver.use-forward-headers=true -Dserver.forward-headers-strategy=framework -Dspringdoc.swagger-ui.path=/";
-            fileContent = fileContent.replace("{{javaOpts}}", javaOpts + " "
-                    + url + " "
-                    + port + " "
-                    + profile + " "
-                    + appName + " "
-                    + forwardHeader);
+        File destino = new File(workspace + "/Dockerfile");
+        if (destino.exists()) {
+            destino.delete();
+        }
+        destino.createNewFile();
 
-            File destino = new File(workspace + "/Dockerfile");
-            if (destino.exists()) {
-                destino.delete();
-            }
-            destino.createNewFile();
+        BufferedWriter writer = new BufferedWriter(new FileWriter(destino));
+        writer.append(fileContent);
+        writer.close();
+    }
 
-            BufferedWriter writer = new BufferedWriter(new FileWriter(destino));
-            writer.append(fileContent);
-            writer.close();
+    private static String readFileToString(String file) throws IOException {
+        try (InputStream inputStream = Main.class.getClassLoader().getResourceAsStream(file)) {
+            return new String(inputStream.readAllBytes());
+        }
+    }
+
+    public static void println(Object msg) {
+        if ("DEBUG".equals(LOG_LEVEL)) {
+            System.out.println(msg);
         }
     }
 }
